# honours

./: .gitmodules  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: grid.frag  sphere.frag  sphere.vert
src/: baseGrid.cpp  baseGrid.h  camera.h  main.cpp  shader.cpp  shader.h  sphere.h
